--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,21 +1,19 @@
 <div id='author-bio'>
   <div class='gravatar'>
-    <img src="http://www.gravatar.com/avatar/04fd01b158b5ca07858d023533b01b24?s=200">
+    <img src="https://pbs.twimg.com/profile_images/681176412934389761/MICoz58L_bigger.jpg">
   </div>
 
   <div class='bio'>
-    Hi, I’m Nithin Bekal,
-    a software craftsman with over 7 years of experience in shipping web applications.
-    I mostly use Ruby, but lately have also been exploring Elixir.
-    Co-founder of <a href='http://crowdstudio.in/'>CrowdStudio.in</a>,
-    and helping organize Rubyconf India.
-    Tweet to me at <a href='https://twitter.com/nithinbekal'>@nithinbekal</a>.
+    Hi, I’m Shantharam Shenoy,
+    a software craftsman with over 7 years of experience in shipping complex enterprise applications.
+    I mostly use IBM BPM tools, but lately have been exploring Ruby and Ruby on Rails.
+    Tweet to me at <a href='https://twitter.com/nithinbekal'>@shantharamksd</a>.
     <br>
     <br>
-    <div class='links'>
+    <!--div class='links'>
       <a id='bio-home-link' href='/'>Posts</a>
       <a id='bio-about-link' href='/about/'>About</a>
       <a id='bio-resume-link' href='/resume'>Hire me</a>
-    </div>
+    </div-->
   </div>
 </div>
