--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,13 +1,14 @@
 <div id='author-bio'>
   <div class='gravatar'>
-    <img src="https://pbs.twimg.com/profile_images/681176412934389761/MICoz58L_bigger.jpg">
+    <img src="https://photos.google.com/photo/AF1QipOoHOZGV494McUnnQ66kZNSUrY3ADuG_GtOr3fN">
   </div>
 
   <div class='bio'>
     Hi, I’m Shantharam Shenoy,
-    a software craftsman with over 7 years of experience in shipping complex enterprise applications.
-    I mostly use IBM BPM tools, but lately have been exploring Ruby and Ruby on Rails.
-    Tweet to me at <a href='https://twitter.com/nithinbekal'>@shantharamksd</a>.
+    a software craftsman with over 9 years of experience in shipping complex enterprise applications.
+    Having previously worked mainly with Enterprise Integration tools, i have recently made the switch to MEAN Stack as well as IIB.
+    I am currently working with <a href="http://www.neutrinos.co/">Neutrinos</a> with a vision to bring idea to life.
+    Tweet to me at <a href='https://twitter.com/shantharamksd'>@shantharamksd</a>.
     <br>
     <br>
     <!--div class='links'>
