--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,6 +1,6 @@
 <div id='author-bio'>
   <div class='gravatar'>
-    <img src="https://photos.google.com/photo/AF1QipOoHOZGV494McUnnQ66kZNSUrY3ADuG_GtOr3fN">
+    <img src="https://www.facebook.com/photo.php?fbid=10156915651325272&set=a.470100385271&type=3&theater">
   </div>
 
   <div class='bio'>
