--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,6 +1,6 @@
 <div id='author-bio'>
   <div class='gravatar'>
-    <img src="https://www.facebook.com/photo.php?fbid=10156915651325272&set=a.470100385271&type=3&theater">
+    <img src="https://avatars3.githubusercontent.com/u/7382340?s=400&v=4">
   </div>
 
   <div class='bio'>
